Fix #435: Update UT entry point
Use "UtTest_Setup" instead of "OS_Application_Startup"

This needs to be merged in coordination with a related change
in OSAL/UT Assert.  This also updates the UT application final
link to use "ut_assert" rather than "ut_bsp", as the separate
bsp for unit test is also getting phased out.

--- a/fsw/cfe-core/unit-test/CMakeLists.txt
+++ b/fsw/cfe-core/unit-test/CMakeLists.txt
@@ -56,7 +56,7 @@ foreach(MODULE ${CFE_CORE_MODULES})
         ut_${CFE_CORE_TARGET}_stubs
         ut_psp-${CFE_SYSTEM_PSPNAME}_stubs
         ut_osapi_stubs 
-        ut_bsp)
+        ut_assert)
   add_test(${CFE_CORE_TARGET}_${MODULE}_UT ${CFE_CORE_TARGET}_${MODULE}_UT)
   install(TARGETS ${CFE_CORE_TARGET}_${MODULE}_UT DESTINATION ${TGTNAME}/${UT_INSTALL_SUBDIR})
 endforeach(MODULE ${CFE_CORE_MODULES})
