Fix #445, create osal api guide with doxygen

--- a/cmake/Makefile.sample
+++ b/cmake/Makefile.sample
@@ -147,6 +147,10 @@ usersguide:
 	$(MAKE) --no-print-directory -C "$(O)" cfe-usersguide
 	@/bin/echo -e "\n\ncFE Users Guide: \nfile://$(CURDIR)/$(O)/doc/users_guide/html/index.html\n"
 
+osalguide:
+	$(MAKE) --no-print-directory -C "$(O)" osalguide
+	@/bin/echo -e "\n\nOsal Users Guide: \nfile://$(CURDIR)/$(O)/doc/osal_guide/html/index.html\n"
+
 # Make all the commands that use the build tree depend on a flag file
 # that is used to indicate the prep step has been done.  This way
 # the prep step does not need to be done explicitly by the user
