Fix #355: Add global scope option to omit deprecated items
Adds a "global_build_options.cmake" file akin to the existing
arch_build/mission_build option files.  Include an example of
this file that optionally does add_definitions() to omit the
deprected elements for build testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,12 @@ include(${MISSION_DEFS}/targets.cmake)
 # Scan the list of targets and organize by target system type.
 read_targetconfig()
 
+# Include global-scope build customization
+# Note if this feature is used it should only set basic options
+# that have wide support (e.g. add_definitions).  It should not
+# set anything target or machine specific.
+include("${MISSION_DEFS}/global_build_options.cmake" OPTIONAL)
+
 # Additionally the target mission might require additional
 # custom build steps or override some routines.  In particular
 # some architectures might need some special installation steps
