Fix #537, Remove private files from user's guide

--- a/cmake/cfe-usersguide.doxyfile.in
+++ b/cmake/cfe-usersguide.doxyfile.in
@@ -23,6 +23,4 @@ INPUT                 += @MISSION_SOURCE_DIR@/cfe/docs/src/cfe_usersguide.dox
 PREDEFINED            += @USERGUIDE_PREDEFINED@
 
 # Bring in the cFE header files for the documentation of the various API calls
-INPUT                 += \
-@MISSION_USERGUIDE_HEADERFILES@ \
-@USERGUIDE_MISC_ADDITION@                
+INPUT                 += @MISSION_USERGUIDE_HEADERFILES@
