Fix #724, implement config-based target builds
The existing build system built target executables grouped by toolchain
as a proxy for CPU architecture + machine options/flags.  The app binaries
would be built once and copied to any/all targets sharing that toolchain.

The side effect of doing this is that the application needs to be written
in an CPU-agnostic manner, performing its subscriptions and configurations
from runtime table data rather than hardcoded/fixed values.  Unfortunately
most apps are not coded that way, so workarounds were needed.

This changes the top level process to include the "platform" within this
target build logic, effectively treating different platform configs as
entirely different builds, even if they share the same toolchain file.

As a result, binaries will only be shared between targets that explicitly
set the "TGTx_PLATFORM" setting in targets.cmake to the same value.

--- a/fsw/cfe-core/unit-test/CMakeLists.txt
+++ b/fsw/cfe-core/unit-test/CMakeLists.txt
@@ -22,7 +22,7 @@ include_directories(
 )
 
 # CFE needs a supplemental test support hook library
-add_library(ut_${CFE_CORE_TARGET}_support STATIC
+add_library(ut_cfe-core_support STATIC
     ut_support.c
     ut_osprintf_stubs.c
 )
@@ -35,7 +35,7 @@ foreach(MODULE ${CFE_CORE_MODULES})
   # The "UT_TARGET_NAME" is a concatenation of the configuration name with the current module
   # This avoids target name duplication in case more than one configuration is used
   # (All  targets should be based on this name)
-  set(UT_TARGET_NAME "${CFE_CORE_TARGET}_${MODULE}")
+  set(UT_TARGET_NAME "cfe-core_${MODULE}")
   
   set(CFE_MODULE_FILES)
   aux_source_directory(${cfe-core_MISSION_DIR}/src/${MODULE} CFE_MODULE_FILES)
@@ -64,7 +64,7 @@ foreach(MODULE ${CFE_CORE_MODULES})
   # This should enable coverage analysis on platforms that support this
   target_link_libraries(${UT_TARGET_NAME}_UT
         ${UT_COVERAGE_LINK_FLAGS}
-        ut_${CFE_CORE_TARGET}_support
+        ut_cfe-core_support
         ut_cfe-core_stubs
         ut_assert)
     
