Fix #739, add global module list and mission default file
Add more hooks for additional flexibility when adding
modular code blobs into the build.

Three new directives are added:

MISSION_CORE_MODULES, for modular components which are
direct dependencies of CFE core and/or extend its functionality.

MISSION_GLOBAL_APPLIST, for applications/libraries which
should be built for every target, as if they were listed
in every TGTx_APPLIST setting.

MISSION_GLOBAL_STATIC_APPLIST, same as above but for the
TGTx_STATIC_APPLIST setting.

This also simplifies/reworks the search path to remove
some logic that was never really utilized.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,9 @@ initialize_globals()
 
 # Load the target configuration information (used by all builds)
 # This is at the top level so all vars set in here will become globals.
+# The "defaults" file is included first, which the user-supplied targets
+# file may override as necessary.
+include("cmake/mission_defaults.cmake")
 include(${MISSION_DEFS}/targets.cmake)
     
 # Scan the list of targets and organize by target system type.
