--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ script:
   # Check versions
   - cppcheck --version
 
-  #cppcheck flight software cfe/fsw/cfe-core/src
-  - cppcheck --force --inline-suppr --std=c99 --language=c --error-exitcode=1 --enable=warning,performance,portability,style --suppress=variableScope --inconclusive fsw/cfe-core/src 2>cppcheck_flight_cfe.txt
+  #cppcheck flight software fsw/cfe-core/src and modules
+  - cppcheck --force --inline-suppr --std=c99 --language=c --error-exitcode=1 --enable=warning,performance,portability,style --suppress=variableScope --inconclusive fsw/cfe-core/src modules 2>cppcheck_flight_cfe.txt
   - |
     if [[ -s cppcheck_flight_cfe.txt ]]; then
       echo "You must fix cppcheck errors before submitting a pull request"
