Fix #808, ES API Info Functional Tests

--- a/modules/cfe_testcase/CMakeLists.txt
+++ b/modules/cfe_testcase/CMakeLists.txt
@@ -4,5 +4,5 @@ include_directories("${UT_ASSERT_SOURCE_DIR}/inc")
 # Create the app module
 add_cfe_app(cfe_testcase
     src/cfe_test.c
-    src/es_test.c
+    src/es_info_test.c
 )
