Fix #1009, Alignment pattern - unit tests
- Replaced CFE_SB_SendMsg and CFE_SB_PassMsg with CFE_SB_TransmitMsg
- Replaced CFE_SB_ZeroCopySend and CFE_SB_ZeroCopyPass with
  CFE_SB_TransmitBuffer
- Replaced CFE_SB_RcvMsg with CFE_SB_ReceiveBuffer
- Used CFE_SB_Buffer_t and CFE_MSG_Message_t where appropriate
- Added Cmd to all command types
- Changed Syslog to SysLog for consistency
- Removed "see also" blocks in documentation, APIs are already grouped
  and these typically don't add anything useful (simplifies maintenance)

--- a/fsw/cfe-core/unit-test/CMakeLists.txt
+++ b/fsw/cfe-core/unit-test/CMakeLists.txt
@@ -71,7 +71,7 @@ foreach(MODULE ${CFE_CORE_MODULES})
         ${UT_COVERAGE_LINK_FLAGS}
         ut_cfe-core_support
         ut_cfe-core_stubs
-        sbr  # TODO remove this
+        sbr  # Will be removed when sbr stubs are implemented
         ut_assert)
 
   add_test(${UT_TARGET_NAME}_UT ${UT_TARGET_NAME}_UT)
