Fix #1108, split resource id functions into module
Move all functions, macros, types, and other definitions
related to resource IDs and generic resource management into
a separate module, like CFE MSG and SBR, etc.

Notably this allows a mission to elect "strict" implementations
of these objects, where every ID type is unique, and assigning
between them (or uint32) results in a compiler error.

--- a/fsw/cfe-core/ut-stubs/CMakeLists.txt
+++ b/fsw/cfe-core/ut-stubs/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(ut_cfe-core_stubs STATIC
     ut_es_stubs.c
     ut_evs_stubs.c
     ut_msg_stubs.c
+    ut_resourceid_stubs.c
     ut_sb_stubs.c
     ut_tbl_stubs.c
     ut_time_stubs.c
