Fix #1144, Add workflow action timeout

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -12,6 +12,7 @@ jobs:
   static-analysis:
     name: Run cppcheck
     runs-on: ubuntu-18.04
+    timeout-minutes: 15
 
     strategy:
       fail-fast: false
