Fix #1224, reinstate recipes for coverage test
This also fixes up/simplifies some include directives in UT headers

Additionally this updates UT_ResetState() in ut_support to always
configure the AppId for CFE_ES_GetAppId.  Unfortunately some TBL test
cases require/assume the "real" app IDs.  This works around the issue
and allows TBL tests to pass.  (This is really a weakness/fragility in
TBL tests).

--- a/modules/fs/ut-coverage/CMakeLists.txt
+++ b/modules/fs/ut-coverage/CMakeLists.txt
@@ -4,4 +4,20 @@
 #
 ##################################################################
 
-# Nothing yet - placeholder for future use
+
+foreach(SRC ${fs_SOURCES})
+    list(APPEND UT_SOURCES "${CFE_FS_SOURCE_DIR}/${SRC}")
+endforeach()
+
+add_cfe_coverage_test(fs ALL
+    "fs_UT.c"
+    "${UT_SOURCES}"
+)
+
+# This permits UT test cases to directly access private headers in the fsw/src dir
+target_include_directories(coverage-fs-ALL-testrunner PRIVATE
+    ${CFE_FS_SOURCE_DIR}/fsw/src
+)
+
+target_link_libraries(coverage-fs-ALL-testrunner ut_core_private_stubs)
+
