--- a/modules/cfe_testrunner/CMakeLists.txt
+++ b/modules/cfe_testrunner/CMakeLists.txt
@@ -1,10 +1,13 @@
 project(CFE_TESTRUNNER C)
 
-include_directories("inc")
-include_directories("${UT_ASSERT_SOURCE_DIR}/inc")
-
 # Create the app module
 add_cfe_app(cfe_testrunner
     src/cfe_testrunner_main.c
 )
 
+target_include_directories(cfe_testrunner PUBLIC
+    ${CFE_TESTRUNNER_SOURCE_DIR}/inc
+)
+
+# register the dependency on cfe_assert
+add_cfe_app_dependency(cfe_testrunner cfe_assert)
