--- a/modules/core_api/CMakeLists.txt
+++ b/modules/core_api/CMakeLists.txt
@@ -12,21 +12,16 @@ add_library(core_api INTERFACE)
 # The fsw/inc here defines global/shared structures and interfaces
 target_include_directories(core_api INTERFACE fsw/inc)
 
-# The list of modules that comprise the "CFE app interface"
-# This is the set of APIs that applications and libraries may call directly
-# The include path to all of them is
-set(core_api_MODULES es evs fs msg resourceid sb tbl time osal psp)
-
 # Propagate any INTERFACE-level include dirs and compile defintions from
 # the modules into this abstract interface target
-foreach(MOD ${core_api_MODULES})
+foreach(MOD ${MISSION_CORE_MODULES})
     target_include_directories(core_api INTERFACE
         $<TARGET_PROPERTY:${MOD},INTERFACE_INCLUDE_DIRECTORIES>
     )
     target_compile_definitions(core_api INTERFACE
         $<TARGET_PROPERTY:${MOD},INTERFACE_COMPILE_DEFINITIONS>
     )
-endforeach(MOD ${core_api_MODULES})
+endforeach(MOD ${MISSION_CORE_MODULES})
 
 # Add unit test coverage subdirectory
 # This provides stubs for functions declared in fsw/inc
@@ -34,7 +29,7 @@ if (ENABLE_UNIT_TESTS)
   add_subdirectory(ut-stubs)
 endif (ENABLE_UNIT_TESTS)
 
-cfs_app_check_intf(${DEP}
+cfs_app_check_intf(core_api
     cfe_resourceid.h
     cfe_endian.h
     cfe_msg.h
