--- a/modules/cfe_testcase/CMakeLists.txt
+++ b/modules/cfe_testcase/CMakeLists.txt
@@ -1,9 +1,9 @@
-include_directories("${CFE_ASSERT_SOURCE_DIR}/inc")
-include_directories("${UT_ASSERT_SOURCE_DIR}/inc")
-
-# Filenames based on doxygen groups. 
+# Filenames based on doxygen groups.
 # Create the app module
 add_cfe_app(cfe_testcase
     src/cfe_test.c
     src/es_info_test.c
 )
+
+# register the dependency on cfe_assert
+add_cfe_app_dependency(cfe_testcase cfe_assert)
