Fix #1301, remove option for "osal_compatible"
Currently it is assumed/required that resource IDs follow the "osal compatible"
pattern.  Perhaps in a future version this could change, but for now it is
simpler to just require this configuration, rather than having an option
with only one choice.

This renames/moves the header file but the content is not fundamentally changed.

--- a/modules/resourceid/CMakeLists.txt
+++ b/modules/resourceid/CMakeLists.txt
@@ -13,6 +13,7 @@ set(resourceid_SOURCES
 add_library(resourceid STATIC ${resourceid_SOURCES})
 
 target_link_libraries(resourceid PRIVATE core_private)
+target_include_directories(resourceid PUBLIC fsw/inc)
 
 # Add unit test coverage subdirectory
 if(ENABLE_UNIT_TESTS)
