Fix #809, add ES Child Task Functional Test Fix #1291, fix spelling typo

--- a/modules/cfe_testcase/CMakeLists.txt
+++ b/modules/cfe_testcase/CMakeLists.txt
@@ -3,6 +3,7 @@
 add_cfe_app(cfe_testcase
     src/cfe_test.c
     src/es_info_test.c
+    src/es_task_test.c
 )
 
 # register the dependency on cfe_assert
