--- a/modules/cfe_testcase/CMakeLists.txt
+++ b/modules/cfe_testcase/CMakeLists.txt
@@ -4,6 +4,7 @@ add_cfe_app(cfe_testcase
     src/cfe_test.c
     src/es_info_test.c
     src/es_task_test.c
+    src/es_cds_test.c
 )
 
 # register the dependency on cfe_assert
