Fix #1297, Add Header Functional tests.

--- a/modules/cfe_testcase/CMakeLists.txt
+++ b/modules/cfe_testcase/CMakeLists.txt
@@ -5,6 +5,7 @@ add_cfe_app(cfe_testcase
     src/es_info_test.c
     src/es_task_test.c
     src/es_cds_test.c
+    src/fs_header_test.c
 )
 
 # register the dependency on cfe_assert
