Fix #1417, generated coverage stubs for CFE core
Update CFE core stub libraries to use generated stubs, using the generator
script now part of UT Assert.  All existing stub logic is converted to
a default handler routine.

This also entailed moving all of the internal API prototypes to be
in the "core_private" interface lib rather than in "core_api".  The
only reason this was not done earlier was due to issues with the stubs,
but that is alleviated when using generated stubs.

--- a/modules/core_api/ut-stubs/CMakeLists.txt
+++ b/modules/core_api/ut-stubs/CMakeLists.txt
@@ -16,14 +16,22 @@ include_directories(${osal_MISSION_DIR}/ut_assert/inc)
 # Create the generic stubs library
 #
 add_library(ut_core_api_stubs STATIC
-    src/ut_es_stubs.c
-    src/ut_evs_stubs.c
-    src/ut_msg_stubs.c
-    src/ut_resourceid_stubs.c
-    src/ut_sb_stubs.c
-    src/ut_tbl_stubs.c
-    src/ut_time_stubs.c
-    src/ut_fs_stubs.c
+    src/cfe_es_hooks.c
+    src/cfe_es_stubs.c
+    src/cfe_evs_hooks.c
+    src/cfe_evs_stubs.c
+    src/cfe_fs_hooks.c
+    src/cfe_fs_stubs.c
+    src/cfe_msg_hooks.c
+    src/cfe_msg_stubs.c
+    src/cfe_resourceid_hooks.c
+    src/cfe_resourceid_stubs.c
+    src/cfe_sb_hooks.c
+    src/cfe_sb_stubs.c
+    src/cfe_tbl_hooks.c
+    src/cfe_tbl_stubs.c
+    src/cfe_time_hooks.c
+    src/cfe_time_stubs.c
 )
 
 # Define _CFE_CORE_ within stubs to also reveal internal APIs in header
