--- a/modules/core_private/ut-stubs/CMakeLists.txt
+++ b/modules/core_private/ut-stubs/CMakeLists.txt
@@ -13,6 +13,13 @@
 # Create the generic stubs library
 #
 add_library(ut_core_private_stubs STATIC
+    src/cfe_es_core_internal_hooks.c
+    src/cfe_es_core_internal_stubs.c
+    src/cfe_evs_core_internal_stubs.c
+    src/cfe_fs_core_internal_stubs.c
+    src/cfe_sb_core_internal_stubs.c
+    src/cfe_tbl_core_internal_stubs.c
+    src/cfe_time_core_internal_stubs.c
     src/ut_osprintf_stubs.c
     src/ut_support.c
 )
