Update #1463, rename hooks files to handler
CCB 2021-05-05 review item, matches name used in code.

--- a/modules/core_api/ut-stubs/CMakeLists.txt
+++ b/modules/core_api/ut-stubs/CMakeLists.txt
@@ -16,21 +16,21 @@ include_directories(${osal_MISSION_DIR}/ut_assert/inc)
 # Create the generic stubs library
 #
 add_library(ut_core_api_stubs STATIC
-    src/cfe_es_hooks.c
+    src/cfe_es_handlers.c
     src/cfe_es_stubs.c
-    src/cfe_evs_hooks.c
+    src/cfe_evs_handlers.c
     src/cfe_evs_stubs.c
-    src/cfe_fs_hooks.c
+    src/cfe_fs_handlers.c
     src/cfe_fs_stubs.c
-    src/cfe_msg_hooks.c
+    src/cfe_msg_handlers.c
     src/cfe_msg_stubs.c
-    src/cfe_resourceid_hooks.c
+    src/cfe_resourceid_handlers.c
     src/cfe_resourceid_stubs.c
-    src/cfe_sb_hooks.c
+    src/cfe_sb_handlers.c
     src/cfe_sb_stubs.c
-    src/cfe_tbl_hooks.c
+    src/cfe_tbl_handlers.c
     src/cfe_tbl_stubs.c
-    src/cfe_time_hooks.c
+    src/cfe_time_handlers.c
     src/cfe_time_stubs.c
 )
 
