Fix #1554, add doxygen aliases for OSAL parameter/retvals
Adds "nonnull", "nonzero", and "covtest" tags to mark parameters
and return values in documentation.  This info is helpful when
auditing the test cases.

--- a/cmake/osal-common.doxyfile.in
+++ b/cmake/osal-common.doxyfile.in
@@ -16,6 +16,10 @@ ABBREVIATE_BRIEF       = "The $name class " \
                          the
 TAB_SIZE               = 8
 OPTIMIZE_OUTPUT_FOR_C  = YES
+ALIASES               +=  nonnull="(must not be null)"
+ALIASES               +=  nonzero="(must not be zero)"
+ALIASES               +=  covtest="(return value only verified in coverage test)"
+
 #---------------------------------------------------------------------------
 # Build related configuration options
 #---------------------------------------------------------------------------
