--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -12,8 +12,8 @@ env:
 
 jobs:
 
-  #Checks for duplicate actions. Skips push actions if there is a matching or duplicate pull-request action. 
-  checks-for-duplicates:
+  #Check for duplicate actions. Skips push actions if there is a matching or duplicate pull-request action. 
+  check-for-duplicates:
     runs-on: ubuntu-latest
     # Map a step output to a job output
     outputs:
@@ -27,6 +27,9 @@ jobs:
           do_not_skip: '["pull_request", "workflow_dispatch", "schedule"]'
 
   Local-Test-Build:
+    #Continue if check-for-duplicates found no duplicates. Always runs for pull-requests.
+    needs: check-for-duplicates
+    if: ${{ needs.check-for-duplicates.outputs.should_skip != 'true' }}
     runs-on: ubuntu-18.04
     timeout-minutes: 15
 
