Fix #1378, simplify doxygen configs
Put the "detaildesign" and "users_guide" into separate working
directories, and do a general cleanup/simplification of the generated
doxyfiles.

Detail design just includes all components, and use "exclude" where
special treatment was needed, and to avoid UT code.

Paths for each "arch" (target-specific) are written to separate files
and included directly in the generated doxyfile, reducing the number
of generated files/layers.

--- a/cmake/cfe-common.doxyfile.in
+++ b/cmake/cfe-common.doxyfile.in
@@ -2,7 +2,6 @@
 # Project related configuration options, shared for all cFE doxygen outputs
 #---------------------------------------------------------------------------
 @INCLUDE_PATH          = @MISSION_SOURCE_DIR@
-OUTPUT_DIRECTORY       = .
 ABBREVIATE_BRIEF       = "The $name class " \
                          "The $name widget " \
                          "The $name file " \
@@ -77,6 +76,12 @@ INPUT                 += @MISSION_SOURCE_DIR@/cfe/docs/src/cfe_xref.dox
 FILE_PATTERNS          = *.c *.cpp *.cc *.C *.h *.hh *.hpp *.H *.dox *.md
 RECURSIVE              = YES
 EXAMPLE_PATTERNS       = *
+
+# Exclude coverage tests, stubs and associated framework from the documentation
+EXCLUDE_PATTERNS       += "*/ut-stubs/*"
+EXCLUDE_PATTERNS       += "*/ut-coverage/*"
+EXCLUDE_PATTERNS       += "*/unit-test*/*"
+
 #---------------------------------------------------------------------------
 # configuration options related to source browsing
 #---------------------------------------------------------------------------
