--- a/cmake/cfe-usersguide.doxyfile.in
+++ b/cmake/cfe-usersguide.doxyfile.in
@@ -8,7 +8,7 @@ INPUT                 += @MISSION_SOURCE_DIR@/cfe/docs/src/main.dox
 # Common definitions, some of which are extended or overridden here.
 @INCLUDE               = @MISSION_BINARY_DIR@/doc/cfe-common.doxyfile
 PROJECT_NAME           = "Core Flight Executive Users Guide"
-OUTPUT_DIRECTORY       = users_guide
+OUTPUT_DIRECTORY       = @CMAKE_BINARY_DIR@/doc/users_guide
 GENERATE_LATEX         = YES
 
 # For purposes of the user guide, reference the "stock" mission configuration
@@ -17,7 +17,6 @@ GENERATE_LATEX         = YES
 STRIP_FROM_PATH       += @MISSION_SOURCE_DIR@/cfe/cmake/sample_defs
 INPUT                 += @MISSION_SOURCE_DIR@/cfe/cmake/sample_defs
 
-#PREDEFINED
 PREDEFINED            += @USERGUIDE_PREDEFINED@
 
 # Bring in the cFE header files for the documentation of the various API calls
