Fix #1589, Separate warning file for doc builds
Use a unique file name for the doxygen warnings, instead
of "warnings.log", so the mutiple documentation targets
will not overwrite the other log file.

Use a prefixed name so that if the log file is uploaded
to the build artifacts, it will be identifiable.

Detail Design warnings in: detaildesign-warnings.log
Users Guide warnings in: cfe-usersguide-warnings.log

--- a/cmake/cfe-usersguide.doxyfile.in
+++ b/cmake/cfe-usersguide.doxyfile.in
@@ -9,6 +9,7 @@ INPUT                 += @MISSION_SOURCE_DIR@/cfe/docs/src/main.dox
 @INCLUDE               = @MISSION_BINARY_DIR@/doc/cfe-common.doxyfile
 PROJECT_NAME           = "Core Flight Executive Users Guide"
 OUTPUT_DIRECTORY       = @CMAKE_BINARY_DIR@/doc/users_guide
+WARN_LOGFILE           = @CMAKE_BINARY_DIR@/doc/cfe-usersguide-warnings.log
 GENERATE_LATEX         = YES
 
 # For purposes of the user guide, reference the "stock" mission configuration
