--- a/cmake/cfe-common.doxyfile.in
+++ b/cmake/cfe-common.doxyfile.in
@@ -55,7 +55,7 @@ GENERATE_DEPRECATEDLIST= YES
 # configuration options related to warning and progress messages
 #---------------------------------------------------------------------------
 WARN_NO_PARAMDOC       = YES
-WARN_LOGFILE           = @CMAKE_BINARY_DIR@/doc/warnings.log
+WARN_LOGFILE           = @CMAKE_BINARY_DIR@/docs/warnings.log
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
