--- a/cmake/mission-detaildesign.doxyfile.in
+++ b/cmake/mission-detaildesign.doxyfile.in
@@ -3,7 +3,7 @@
 #---------------------------------------------------------------------------
 
 # Start with the common definitions, some of which are extended or overridden here.
-@INCLUDE               = @MISSION_BINARY_DIR@/doc/cfe-common.doxyfile
+@INCLUDE               = @MISSION_BINARY_DIR@/docs/cfe-common.doxyfile
 PROJECT_NAME           = "@MISSION_NAME@"
 PROJECT_BRIEF          = "Core Flight System project built using \"@MISSIONCONFIG@\" configuration"
 OUTPUT_DIRECTORY       = detaildesign
@@ -30,4 +30,4 @@ STRIP_FROM_PATH       += @MISSION_DEFS@
 #---------------------------------------------------------------------------
 # The user content doxyfile contains paths to the mission-specific applications
 #---------------------------------------------------------------------------
-@INCLUDE               = @CMAKE_BINARY_DIR@/doc/mission-content.doxyfile
+@INCLUDE               = @CMAKE_BINARY_DIR@/docs/mission-content.doxyfile
