--- a/modules/cfe_testcase/CMakeLists.txt
+++ b/modules/cfe_testcase/CMakeLists.txt
@@ -9,6 +9,7 @@ add_cfe_app(cfe_testcase
     src/es_mempool_test.c
     src/fs_header_test.c
     src/sb_pipe_mang_test.c
+    src/time_arithmetic_test.c
     src/time_current_test.c
 )
 
