--- a/modules/cfe_testcase/CMakeLists.txt
+++ b/modules/cfe_testcase/CMakeLists.txt
@@ -7,6 +7,7 @@ add_cfe_app(cfe_testcase
     src/es_cds_test.c
     src/es_misc_test.c
     src/es_mempool_test.c
+    src/es_resource_id_test.c
     src/evs_send_test.c
     src/fs_header_test.c
     src/fs_util_test.c
