Fix #1946, Correct typos in test, error messages
Also fixes typo in github workflow error string

--- a/.github/workflows/functional-tests.yml
+++ b/.github/workflows/functional-tests.yml
@@ -79,7 +79,7 @@ jobs:
             temp=$(grep -c "BEGIN" cf/cfe_test.tmp) 
               
             if [ $temp -eq $counter ]; then
-              echo "Test is frozen. Quiting"
+              echo "Test is frozen. Quitting"
               break
             fi
 
